@@ -4,6 +4,12 @@
 
 2005-04-28 Takuro Ashie <ashie@homa.ne.jp>
 
+	* src/scim_canna_imengine.cpp, src/scim_canna_imengine.h,
+	  src/canna_jrkanji.cpp, src/scim_canna_jrkaji.h:
+	Make sure to show preedit string and aux string.
+
+2005-04-28 Takuro Ashie <ashie@homa.ne.jp>
+
 	* src/scim_canna_imengine_setup.cpp: Refactoring.
 
 2005-04-06 Takuro Ashie <ashie@homa.ne.jp>
